feat: structured output, versioned prompts, graceful fallback, resilience, caching
Harden the generation stage and make the whole flow degrade gracefully.

- Structured output enforced at the API level: Gemini generationConfig with
  responseMimeType=application/json + a responseSchema, so parsing is reliable
  (no markdown-fence stripping).
- Versioned prompt as a first-class resource (prompts/recommendation.v1.txt) via
  RecommendationPromptBuilder; version is logged for traceability.
- Graceful degradation: RuleBasedRecommender serves deterministic recommendations
  from the retrieved candidates whenever the LLM is unavailable (no key, quota,
  error) - previously an LLM failure returned an EMPTY list.
- Resilience: exponential-backoff retry on Gemini 429/5xx (ported from the old
  dead OpenAIClient), and the embedding backfill is now @Async + retry/backoff,
  so it never blocks startup and resumes after rate limits.
- Caching: Caffeine cache for query embeddings (cuts repeat API calls).
- Remove dead OpenAIClient/OpenAIConfig. Add "test" profile that disables
  ingestion/embedding for the context test.

Verified locally: with a key -> clean JSON LLM recommendations; with NO key ->
HTTP 200 with rule-based recommendations (logs confirm the fallback path);
async backfill runs off the startup thread. mvn clean test: 1 run, 0 failures.